<resources>
    <string name="app_name">MyStuder</string>
    <string name="welcome">Welcome to MyStuder. Create your profile.</string>
    <string name="edit_profile">Edit your profile</string>
    <string name="man">man</string>
    <string name="woman">woman</string>
    <string name="gender">gender:</string>
    <string name="grade">grade:</string>
    <string name="nine" translatable="false">9.</string>
    <string name="ten" translatable="false">10.</string>
    <string name="eleven" translatable="false">11.</string>
    <string name="twelve" translatable="false">12.</string>
    <string name="profile">profile:</string>
    <string name="human">human</string>
    <string name="real">real</string>
    <string name="energy">energy</string>
    <string name="calm">calm</string>
    <string name="balanced">balanced</string>
    <string name="turbulent">turbulent</string>
    <string name="hours_slept">sleep time:</string>
    <string name="sixty_nine" translatable="false">6.9</string>
    <string name="absences">absences:</string>
    <string name="seven">7</string>
    <string name="minutes_school">minutes from school:</string>
    <string name="one_twenty" translatable="false">120</string>
    <string name="motivation">motivation:</string>
    <string name="parent_influence">importance for parents:</string>
    <string name="days_extra">days with extra activities:</string>
    <string name="name">name:</string>
    <string name="Alexander">Alexander</string>
    <string name="save">save</string>
    <string name="choose_category">Select a subject</string>
    <string name="delete_subject">Delete subject</string>
    <string name="delete_grades">Delete grades</string>
    <string name="importance1">how important is studying for you?</string>
    <string name="importance2">how motivated are you to study?</string>
    <string name="importance3">how severely do studying pitfalls affect you?</string>
    <string name="importance4">how important is your performance to your parents?</string>
    <string name="importance5">how severely do bad grades affect you?</string>
    <string name="importance6">how easily do you meet your study-goals?</string>
    <string name="study_time">study time:</string>
    <string name="delete_classes">delete classes</string>
    <string name="choose_day">Choose day</string>
    <string name="loading">Loading</string>
    <string name="nine_eleven" translatable="false">9.11</string>

    <string name="last_under">Bad! You should have been at least around: </string>
    <string name="last_average">OK! You should have been at least around: </string>
    <string name="last_top">Very good! </string>

    <string name="goal_under">You should aim for a higher goal! Try for at least: </string>
    <string name="goal_average">Your goal is average. If you want to aim for the top try: </string>
    <string name="goal_top">Excellent goal!  </string>

    <string name="current_under">Bad! You are below your target.</string>
    <string name="current_average">You are on track with in regards to your goal.</string>
     <string name="current_top">You are over performing! Consider adjusting your current goal.</string>



<string name="average">average:</string>
    <string name="real_average">real average:</string>
    <string name="human_average">human average:</string>
    <string name="last_year">last year</string>
    <string name="this_year">this year</string>
    <string name="average_last">last average:</string>
    <string name="average_now">average goal:</string>
    <string name="goal">goal:</string>
    <string name="one_hour">1 hour</string>
    <string name="three_or_more_hours">3+ hours</string>
    <string name="non_important">non-important</string>
    <string name="important">important</string>
    <string name="one_extra_per_week">1 extra per week</string>
    <string name="seven_extra_per_week">7 extras per week</string>

    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>

    <string-array name="evaluations">
        <item>Uhoh… Your values are under the average, you should strive to get results of around: </item>
        <item>Doing OK! Your values are on the same level as of your peers, that being: </item>
        <item>Excelling! You are above the level of the average student considering these numbers, who are only around: </item>
    </string-array>
    <string name="settings">Settings</string>
    <string name="subjects">Subjects</string>
    <string name="timetable">Timetable</string>
    <string name="my_profile">My Profile</string>
    <string name="average_current">current average:</string>
    <string name="time_spent_studying">Time spent studying:</string>
    <string name="overload_absences">You have too many absences!</string>
    <string name="doing_good">You are doing good!</string>
    <string name="overload_activities">You have an overwhelming amount of activities!</string>
    <string name="under_treshold">Currently, you are under the threshold.</string>
    <string name="underperforming">Currently, you are underperforming.</string>
    <string name="moderate_work">You are putting in a moderate amount of work.</string>
    <string name="good_investment">You are investing a lot of time into this! Good job.</string>
    <string name="add_class">Add class</string>
    <string name="all_days">all days</string>
    <string name="sunday">sunday</string>
    <string name="monday">monday</string>
    <string name="tuesday">tuesday</string>
    <string name="wednesday">wednesday</string>
    <string name="thursday">thursday</string>
    <string name="friday">friday</string>
    <string name="saturday">saturday</string>
    <string name="select_order">Select order:</string>
    <string name="nullthclass">0th class</string>
    <string name="tenthclass">10th class</string>
    <string name="day">day:</string>
    <string name="subject">subject:</string>
    <string name="order">order:</string>
    <string name="time">time:</string>
    <string name="add">add</string>
    <string name="add_grade">Add grade</string>
    <string name="add_subject">Add subject</string>
    <string name="all_subjects">all subjects</string>
    <string name="real_subject">Real subject</string>
    <string name="this_year_s_goal">this year\'s goal</string>
    <string name="last_year_s_average">last year\'s average</string>
    <string name="subject_name">subject name</string>
    <string name="note">grade</string>
    <string name="error_values">Please provide accurate values.</string>
    <string name="subject_added">Subject added</string>
    <string name="grade_added">Grade added</string>
</resources>
