<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SubjectsActivity">


    <Spinner
        android:id="@+id/subjects_sp_subjects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:spinnerMode="dialog"
        android:prompt="@string/choose_category" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:text="@string/last_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginHorizontal="15dp"
            />

        <TextView
            android:id="@+id/subject_tv_laverage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>


        <TextView
            android:text="@string/current_goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/subject_tv_gaverage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />


    </LinearLayout>



    <ListView
        android:id="@+id/subject_lv_grades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:onClick="onDeleteSubjectClicked"
            android:text="@string/delete_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:onClick="onDeleteGradesClicked"
            android:text="@string/delete_grades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />


    </LinearLayout>

</LinearLayout>